Bug 182366 - Display name not saved/retrieved for WLM
Summary: Display name not saved/retrieved for WLM
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: WLM Plugin (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 184108 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-30 00:29 UTC by Linus Östberg
Modified: 2009-03-29 05:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Linus Östberg 2009-01-30 00:29:42 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Slackware Packages

The display name for WLM is neither retrieved from nor saved on the server. That is: if you change the name on another computer/application, it will still be the old name in Kopete. The opposite is also true; if you change the name in Kopete, no other applications/computers will have the name changed.
Comment 1 Tiago Salem Herrmann 2009-02-06 14:20:07 UTC
did you set a nickname in the identity?
The nickname used is always the one stored in the identity settings.
If you do not set a nickname there, the one stored in the server side is used instead.
If you change the nickname by using the "Change Display Name.." option, the server side is updated and the new nickname is used during the current session only, so next time you login the one stored in the identity will be used again, unless there is no nickname set there.
Comment 2 Linus Östberg 2009-02-06 17:07:51 UTC
I did not enter any nickname, which means that it should the server side one instead, which is what happened in Kopete with 4.1. 

With 4.2 the name is only set to the mail adress (whatever@whatever.com), but changes to the display name will be reused inside Kopete in the future.

In 4.1 however, the new display name was saved on the server, meaning the name would be the same in other clients/computers, which does not occur with 4.2.
Comment 3 Michaël Larouche 2009-02-14 01:42:15 UTC
I confirm this bug as well. I started investigate this bug because I hate not having my display name from roaming content.

For now, I found out that gotDisplayName() callback is never called. Now I need to dig into libmsn code :)
Comment 4 Tiago Salem Herrmann 2009-02-14 01:47:29 UTC
hm, I guess the problem is that the display name is being retrieved from the wrong place. Fixing libmsn should be enough to get it working, but I think a little bit of reverse engineering will be needed.
Comment 5 Matt Rogers 2009-02-20 05:55:51 UTC
SVN commit 928775 by mattr:

Fix display name not retrieved/saved.
This commit is for KDE 4.3. It will also be fixed for KDE 4.2.1

CCBUG: 182366


 M  +7 -0      wlmaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=928775
Comment 6 Matt Rogers 2009-02-20 06:01:22 UTC
SVN commit 928776 by mattr:

Backport the display name display fix
This will be in KDE 4.2.1

BUG: 182366



 M  +7 -0      wlmaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=928776
Comment 7 Matt Rogers 2009-03-29 05:55:19 UTC
*** Bug 184108 has been marked as a duplicate of this bug. ***