Backport the display name display fix This will be in KDE 4.2.1

BUG: 182366


svn path=/branches/KDE/4.2/kdenetwork/kopete/; revision=928776